# rwkv-paddle

./: MANIFEST.in  README.md  pyproject.toml
src/rwkv_paddle/: model.py  serialization.py  setup.py  utils.py
src/rwkv_paddle/cuda/: operators.cu  wrapper.cpp
